Bug #41103 6.0 Windows embedded-server tests fail
Submitted: 28 Nov 2008 15:58 Modified: 8 Mar 2010 1:04
Reporter: Alexey Botchkov Email Updates:
Status: Closed
Category:libmysqld Severity:S3 (Non-critical)
Version:6.0,5.5.99-m3 OS:Microsoft Windows
Assigned to: Alexey Botchkov Target Version:5.4+
Triage: Triaged: D1 (Critical)

[28 Nov 2008 15:58] Alexey Botchkov
Description:
no tests pass

How to repeat:
./mysql-test-run.pl --embedded-server on Windows
[28 Nov 2008 16:02] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60199

2759 Alexey Botchkov	2008-11-28
      Bug #41103 6.0 Windows embedded-server tests fail 
          to be exported correctly from the DLL, data
          has to be declared as __declspec(dllimport)
          for the client, and as DATA in the .def file.
[28 Nov 2008 16:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60200

2759 Alexey Botchkov	2008-11-28
      Bug#41103 6.0 Windows embedded-server tests fail
          to be exported correctly from the DLL, data
          has to be declared as __declspec(dllimport)
          for the client, and as DATA in the .def file.
      
      per-file comments:
        include/m_string.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        include/my_global.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        include/my_sys.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        libmysql/libmysql.def
      Bug#41103 6.0 Windows embedded-server tests fail
         DATA modifiers added
        libmysqld/examples/CMakeLists.txt
      Bug#41103 6.0 Windows embedded-server tests fail
         MY_USE_CLIENT_DLL defined for projects
        libmysqld/libmysqld.def
      Bug#41103 6.0 Windows embedded-server tests fail
         DATA modifiers added
[1 Dec 2008 12:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60271

2760 Alexey Botchkov	2008-12-01
      Bug #41103 6.0 Windows embedded-server tests fail 
        additional fix
[3 Dec 2008 15:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60500

2771 Alexey Botchkov	2008-12-03
      Bug #41103 6.0 Windows embedded-server tests fail 
      to be exported correctly from the DLL, data
                has to be declared as __declspec(dllimport)
                for the client, and as DATA in the .def file.
            
            per-file comments:
              include/m_string.h
            Bug#41103 6.0 Windows embedded-server tests fail
                __declspec(dllimport) added for Windows
              include/my_global.h
            Bug#41103 6.0 Windows embedded-server tests fail
                __declspec(dllimport) added for Windows
              include/my_sys.h
            Bug#41103 6.0 Windows embedded-server tests fail
                __declspec(dllimport) added for Windows
              libmysql/libmysql.def
            Bug#41103 6.0 Windows embedded-server tests fail
               DATA modifiers added
              libmysqld/examples/CMakeLists.txt
            Bug#41103 6.0 Windows embedded-server tests fail
               MY_USE_CLIENT_DLL defined for projects
              libmysqld/libmysqld.def
            Bug#41103 6.0 Windows embedded-server tests fail
               DATA modifiers added
      
      per-file comments:
        include/m_string.h
        include/my_global.h
        include/my_sys.h
        libmysql/libmysql.def
        libmysqld/examples/CMakeLists.txt
        libmysqld/libmysqld.def
[5 Dec 2008 1:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60676

2772 Vladislav Vaintroub	2008-12-05 [merge]
       - merge BUG#38522 from 5.1
      - revert  BUG#41103
[8 Dec 2008 11:32] Bugs System
Pushed into 6.0.9-alpha  (revid:vvaintroub@mysql.com-20081205010505-lsp4y3930slu2mie)
(version source revid:vvaintroub@mysql.com-20081205010505-lsp4y3930slu2mie) (pib:5)
[5 Feb 2010 14:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/99428

2984 Alexey Botchkov	2010-02-04
      Bug#41103      6.0 Windows embedded-server tests fail
          Two problems addressed here:
             Embedded-server linking failure.
                sql/sys_vars.cc absents in the libmysqld/CMakeLists.txt
             The PERFORMANCE_SCHEMA-related failure of the embedded-server compilation.
                We try to disable the PERFORMANCE_SCHEMA in the embedded server
                as it's considered useless there. But we do it in wrong way as
                we only disable header's links to the PF, not the PF's library itself.
                So on Unix-ex the embedded library still contains the PF code and
                grows bigger with no reason. On Windows that just fails to compile.
             
      per-file comments:
        include/my_global.h
      Bug#41103      6.0 Windows embedded-server tests fail
            No PERFORMANCE_SCHEMA disabling in the embedded server. User can
            just use the --without-perfschema-engine-plugin option to exclude it
            from the compilation.
        libmysqld/CMakeLists.txt
      Bug#41103      6.0 Windows embedded-server tests fail
            sql/sys_vars.cc added to the 'mysqlserver' library
[26 Feb 2010 12:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/101630

2992 Alexey Botchkov	2010-02-25
      Bug#41103      6.0 Windows embedded-server tests fail
          Two problems addressed here:
             Embedded-server linking failure.
                sql/sys_vars.cc absents in the libmysqld/CMakeLists.txt
             The PERFORMANCE_SCHEMA-related failure of the embedded-server compilation.
                We try to disable the PERFORMANCE_SCHEMA in the embedded server
                as it's considered useless there. But we do it in wrong way as
                we only disable header's links to the PF, not the PF's library itself.
                So on Unix-ex the embedded library still contains the PF code and
                grows bigger with no reason. On Windows that just fails to compile.
                   
      per-file comments:
        include/my_global.h
      Bug#41103      6.0 Windows embedded-server tests fail
            No PERFORMANCE_SCHEMA disabling in the embedded server. User can
            just use the --without-perfschema-engine-plugin option to exclude it
            from the compilation.
[26 Feb 2010 13:01] Alexey Botchkov
mysql-next-mr-bugfixing
[6 Mar 2010 10:29] Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100306102742-yw9zzgw9ac5r65m5) (version
source revid:bar@mysql.com-20100305074327-h09o5lw290s04lcf) (merge vers: 6.0.14-alpha)
(pib:16)
[6 Mar 2010 10:30] Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100306102638-qna09hbjb5gm940h) (version
source revid:alik@sun.com-20100304153932-9hajxhhyanqbckmu) (pib:16)
[6 Mar 2010 10:57] Bugs System
Pushed into 5.5.3-m3 (revid:alik@sun.com-20100306103849-hha31z2enhh7jwt3) (version source
revid:alik@sun.com-20100304153932-9hajxhhyanqbckmu) (merge vers: 5.5.99-m3) (pib:16)
[8 Mar 2010 1:04] Paul DuBois
Noted in 6.0.14 changelog.

On Windows, there was a linking failure for the object file for
set_vars.cc in the embedded server.

No 5.5.x entry because this problem does not appear in any released 5.5.x version, I
believe.

No entry text for the Performance Schema problem because it does not appear in any
released version.