Bug #41103 6.0 Windows embedded-server tests fail to be exported correctly from the DLL, data           has to be declared as __declspec(dllimport)           for the client, and as DATA in the .def file.

per-file comments:
        include/m_string.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        include/my_global.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        include/my_sys.h
      Bug#41103 6.0 Windows embedded-server tests fail
          __declspec(dllimport) added for Windows
        libmysql/libmysql.def
      Bug#41103 6.0 Windows embedded-server tests fail
         DATA modifiers added
        libmysqld/examples/CMakeLists.txt
      Bug#41103 6.0 Windows embedded-server tests fail
         MY_USE_CLIENT_DLL defined for projects
        libmysqld/libmysqld.def
      Bug#41103 6.0 Windows embedded-server tests fail
         DATA modifiers added

per-file comments:
  include/m_string.h
  include/my_global.h
  include/my_sys.h
  libmysql/libmysql.def
  libmysqld/examples/CMakeLists.txt
  libmysqld/libmysqld.def