mysys/my_fopen.c
@@ -18,7 +18,6 @@
 #include <errno.h>
 #include "mysys_err.h"
 
-static void make_ftype(char * to,int flag);
 
 /*
   Open a file as stream
@@ -196,7 +195,7 @@ FILE *my_fdopen(File Filedes, const char *name, int Flags, myf MyFlags)
     a+ == O_RDWR|O_APPEND|O_CREAT
 */
 
-static void make_ftype(register char * to, register int flag)
+void make_ftype(register char * to, register int flag)
 {
   /* check some possible invalid combinations */  
   DBUG_ASSERT((flag & (O_TRUNC | O_APPEND)) != (O_TRUNC | O_APPEND));
